vlib/v/checker/tests/ambiguous_function_call_b.vv
fn foo() {
	foo := 1
	foo(foo)
}

fn main() {
	foo()
}
